@@ -178,7 +178,7 @@ class Membership_Module_Protection extends Membership_Module {
 		global $post, $M_options;
 
 		// If welcome page then redirect.
-		if ( $post->ID == $M_options['registrationcompleted_page'] && ( !is_user_logged_in() || !Membership_Plugin::current_member()->has_subscription() ) ) {
+		if ( isset( $M_options['registrationcompleted_page'] ) && $post->ID == $M_options['registrationcompleted_page'] && ( !is_user_logged_in() || !Membership_Plugin::current_member()->has_subscription() ) ) {
 			membership_redirect_to_protected();
 			exit;
 		}
